# Holistic-Evaluation-for-AI-Interview-Agentic-Workflow

./: README.md  pyproject.toml
src/holistic_interview_evaluator_with_reference_answers/: api_server.py  crew.py  main.py
src/holistic_interview_evaluator_with_reference_answers/config/: agents.yaml  tasks.yaml
